small testing aids

--- a/form-authentication/src/main/resources/public/home.html
+++ b/form-authentication/src/main/resources/public/home.html
@@ -1,7 +1,8 @@
 <h1>Greetings</h1>
-<div ng-controller="home" ng-show="authenticated">
+<div ng-show="authenticated">
 	<p>The ID is {{greeting.id}}</p>
 	<p>The content is {{greeting.content}}</p>
+	<button ng-click="newGreeting()">New Greeting</button>
 </div>
 <div ng-show="!authenticated">
 	<p>Login to see your greeting</p>
