--- a/springboot-oauth2jwt-extjs/src/main/resources/public/index.html
+++ b/springboot-oauth2jwt-extjs/src/main/resources/public/index.html
@@ -14,6 +14,7 @@
 <body>
 
 <script type="text/javascript" src="app.js"></script>
+<script type="text/javascript" src="config.js"></script>
 
 </body>
 </html>
