--- a/springboot-oauth2jwt-extjs/src/main/resources/public/jquery-auth.html
+++ b/springboot-oauth2jwt-extjs/src/main/resources/public/jquery-auth.html
@@ -40,6 +40,7 @@
                     "Authorization": "Bearer " + token
                 },
                 success: function (data) {
+                    $(document.body).append(JSON.stringify(data));
                     console.log(data);
                 },
                 error: function () {
